# LogicGateSim

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build_log.txt  imgui.ini  opis_projektu.typ  skrot_projektu.typ
dependencies/: CMakeLists.txt
src/: CMakeLists.txt  Install.cmake  main.cpp
src/Core/: Component.cpp  Component.h  Gates.cpp  Gates.h  IOComponents.cpp  IOComponents.h  Pin.cpp  Pin.h  ResourceManager.cpp  ResourceManager.h  Wire.cpp  Wire.h
src/Core/Components/CustomComponent/: CustomComponent.cpp  CustomComponent.h  CustomComponentDefinition.h  CustomComponentManager.cpp  CustomComponentManager.h
src/Core/Components/Include/: AndGate.h  Button.h  ClockComponent.h  Component.h  ComponentFactory.h  CustomComponent.h  DFlipFlop.h  FlipFlop.h  Gate.h  InputComponent.h  JKFlipFlop.h  LEDComponent.h  NandGate.h  NorGate.h  NotGate.h  OrGate.h  OutputComponent.h  Pin.h  ResourceManager.h  SRFlipFlop.h  TFlipFlop.h  Wire.h  XnorGate.h  XorGate.h
src/Core/Components/Source/: AndGate.cpp  Button.cpp  ClockComponent.cpp  Component.cpp  ComponentFactory.cpp  CustomComponent.cpp  DFlipFlop.cpp  FlipFlop.cpp  Gate.cpp  InputComponent.cpp  JKFlipFlop.cpp  LEDComponent.cpp  NandGate.cpp  NorGate.cpp  NotGate.cpp  OrGate.cpp  OutputComponent.cpp  Pin.cpp  ResourceManager.cpp  SRFlipFlop.cpp  TFlipFlop.cpp  Wire.cpp  XnorGate.cpp  XorGate.cpp
src/Serialization/: CircuitSerializer.cpp  CircuitSerializer.h
src/Simulation/: Circuit.cpp  Circuit.h
src/UI/: ComponentPreview.cpp  ComponentPreview.h  UIManager.cpp  UIManager.h
src/UI/Include/: ComponentPreview.h  PinPlotter.h  ToggableImGuiWindow.h  UIManager.h
src/UI/Source/: ComponentPreview.cpp  PinPlotter.cpp  UIManager.cpp
